--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --color-bg: #2e3440;
   --color-fg: #c2cdde;
   --color-link: #e5e9f0;
-  --color-link-visited: #b48ead;
+  --color-link-visited: #e5e9f0;
   --color-link-hover: #b48ead ;
 }
 
