--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ padding-left: 15px;
 max-width: 121%;
 margin-top: 67px;
 border-width: 6px;
-border-color: #3b4568;
+border-color: #c2cdde;
 border-style: groove;
 border-radius: 6px;
 }
@@ -110,7 +110,7 @@ padding-left: 20px;
 .title {
 font-size: 20px;
 padding-bottom: 7.5px;
-color: #bf616a;
+color: #b48ead;
 
 }
 
