--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ padding-left: 15px;
 max-width: 121%;
 margin-top: 67px;
 border-width: 6px;
-border-color: #c2cdde;
+border-color: #4c566a;
 border-style: groove;
 border-radius: 6px;
 }
